# newsFish

./: CMakeLists.txt  newsFish.desktop  newsFish.pro  newsFish.pro.user.7f25da7  uk.co.piggz.newsfish.desktop  uk.co.piggz.newsfish.sailfish.desktop
ownnews/: feedsmodel.cpp  feedsmodel.h  itemsmodel.cpp  itemsmodel.h  itemworker.cpp  itemworker.h  newsinterface.cpp  ownnews.pri
qml/: newsFish.qml
qml/pages/: FeedPage.qml  FirstPage.qml  ItemPage.qml  ItemView.qml  SettingsPage.qml
rpm/: newsFish.spec  newsFish.yaml
src/: CMakeLists.txt  Helper.cpp  Helper.h  feedsmodel.cpp  feedsmodel.h  itemsmodel.cpp  itemsmodel.h  itemworker.cpp  itemworker.h  main.cpp  newsFish.cpp  newsinterface.cpp  newsinterface.h  resources.qrc
src/qml/: newsFish.qml
src/qml/pages/: FeedPage.qml  ItemPage.qml  ItemView.qml  SettingsPage.qml
